--- a/HDT_AnomalyTrack/HDT_BGFightTracker.csproj
+++ b/HDT_AnomalyTrack/HDT_BGFightTracker.csproj
@@ -31,6 +31,10 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="HearthDb">
+      <HintPath>C:\Users\wolfy\source\repos\HDT_AnomalyTrack\References\HearthDb.dll</HintPath>
+      <Private>False</Private>
+    </Reference>
     <Reference Include="HearthMirror">
       <HintPath>References\HearthMirror.dll</HintPath>
       <Private>False</Private>
@@ -61,70 +65,20 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="AnomalyPanel.xaml.cs">
-      <DependentUpon>AnomalyPanel.xaml</DependentUpon>
+    <Compile Include="Converters.cs" />
+    <Compile Include="StatisticsView.xaml.cs">
+      <DependentUpon>StatisticsView.xaml</DependentUpon>
     </Compile>
     <Compile Include="HDT_AnomalyTrackerPlugin.cs" />
+    <Compile Include="OpponentDB.cs" />
+    <Compile Include="OpponentStatisticsModel.cs" />
+    <Compile Include="OpponentViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RoundResult.cs" />
     <Compile Include="ViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
-    <Resource Include="Images\BG27_Anomaly_000.png" />
-    <Resource Include="Images\BG27_Anomaly_002.png" />
-    <Resource Include="Images\BG27_Anomaly_005.png" />
-    <Resource Include="Images\BG27_Anomaly_103.png" />
-    <Resource Include="Images\BG27_Anomaly_301.png" />
-    <Resource Include="Images\BG27_Anomaly_302.png" />
-    <Resource Include="Images\BG27_Anomaly_303.png" />
-    <Resource Include="Images\BG27_Anomaly_501.png" />
-    <Resource Include="Images\BG27_Anomaly_503.png" />
-    <Resource Include="Images\BG27_Anomaly_504.png" />
-    <Resource Include="Images\BG27_Anomaly_559.png" />
-    <Resource Include="Images\BG27_Anomaly_562.png" />
-    <Resource Include="Images\BG27_Anomaly_570.png" />
-    <Resource Include="Images\BG27_Anomaly_571.png" />
-    <Resource Include="Images\BG27_Anomaly_572.png" />
-    <Resource Include="Images\BG27_Anomaly_573.png" />
-    <Resource Include="Images\BG27_Anomaly_575.png" />
-    <Resource Include="Images\BG27_Anomaly_577.png" />
-    <Resource Include="Images\BG27_Anomaly_580.png" />
-    <Resource Include="Images\BG27_Anomaly_711.png" />
-    <Resource Include="Images\BG27_Anomaly_715.png" />
-    <Resource Include="Images\BG27_Anomaly_716.png" />
-    <Resource Include="Images\BG27_Anomaly_718.png" />
-    <Resource Include="Images\BG27_Anomaly_720.png" />
-    <Resource Include="Images\BG27_Anomaly_721.png" />
-    <Resource Include="Images\BG27_Anomaly_723.png" />
-    <Resource Include="Images\BG27_Anomaly_750.png" />
-    <Resource Include="Images\BG27_Anomaly_751.png" />
-    <Resource Include="Images\BG27_Anomaly_754.png" />
-    <Resource Include="Images\BG27_Anomaly_755.png" />
-    <Resource Include="Images\BG27_Anomaly_801.png" />
-    <Resource Include="Images\BG27_Anomaly_803.png" />
-    <Resource Include="Images\BG27_Anomaly_805.png" />
-    <Resource Include="Images\BG27_Anomaly_810.png" />
-    <Resource Include="Images\BG27_Anomaly_822.png" />
-    <Resource Include="Images\BG27_Anomaly_900.png" />
-    <Resource Include="Images\BG31_Anomaly_101.png" />
-    <Resource Include="Images\BG31_Anomaly_102.png" />
-    <Resource Include="Images\BG31_Anomaly_104.png" />
-    <Resource Include="Images\BG31_Anomaly_105.png" />
-    <Resource Include="Images\BG31_Anomaly_106.png" />
-    <Resource Include="Images\BG31_Anomaly_109.png" />
-    <Resource Include="Images\BG31_Anomaly_111.png" />
-    <Resource Include="Images\BG31_Anomaly_112.png" />
-    <Resource Include="Images\BG31_Anomaly_114.png" />
-    <Resource Include="Images\BG31_Anomaly_115.png" />
-    <Resource Include="Images\BG31_Anomaly_116.png" />
-    <Resource Include="Images\BG31_Anomaly_117.png" />
-    <Resource Include="Images\BG31_Anomaly_120.png" />
-    <Resource Include="Images\BG31_Anomaly_123.png" />
-    <Resource Include="Images\BG31_Anomaly_124.png" />
-    <Resource Include="Images\BG31_Anomaly_126.png" />
-    <Resource Include="Images\BG31_Anomaly_127.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <Page Include="AnomalyPanel.xaml">
+    <Page Include="StatisticsView.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
