--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,3 @@
 /HDT_AnomalyTrack/bin
 /HDT_AnomalyTrack/.vs
-/HDT_AnomalyTrack/obj
-/HDT_AnomalyTrack/obj
-/HDT_AnomalyTrack/obj
+/HDT_AnomalyTrack/obj/
