Added reload button, and logs to investigate events not raised by HDT.

--- a/HDT_BGFightTracker/HDT_BGFightTracker.csproj
+++ b/HDT_BGFightTracker/HDT_BGFightTracker.csproj
@@ -71,6 +71,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Converters.cs" />
+    <Compile Include="LogsHelper.cs" />
+    <Compile Include="RelayCommand.cs" />
     <Compile Include="StatisticsView.xaml.cs">
       <DependentUpon>StatisticsView.xaml</DependentUpon>
     </Compile>
